# ninc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: esrep.yml
docs/: README_zh.md  report_form.md
src/: main.rs
src/commands/: ecard.rs  esrep.rs  login.rs  mod.rs
src/commands/ecard/: long.rs  mod.rs  short.rs
src/commands/edu/: eval.rs  mod.rs
src/data/: consts.rs  mod.rs
src/data/args/: ecard.rs  edu.rs  esrep.rs  login.rs  mod.rs
src/data/args/edu/: eval.rs  mod.rs
src/data/types/: config.rs  mod.rs  storage.rs  user.rs
src/data/types/config/: basic.rs  esrep.rs  mod.rs
src/data/types/config/esrep/: mod.rs  report_at_school.rs  report_other.rs
src/data/types/storage/: basic.rs  login.rs  mod.rs
src/tools/: auth.rs  login.rs  mod.rs  path.rs  user.rs
src/tools/auth/: edu.rs  esrep.rs  eval.rs  home.rs  mod.rs
