[package]
name = "ninc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

regex = "1.5"

base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

clap = { version = "3.2.8", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
