[package]
name = "ninc"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0"

regex = "1.5"
chrono = "0.4"

base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

clap = { version = "3.2.8", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
